--- a/src/components/About/About.styles.css
+++ b/src/components/About/About.styles.css
@@ -21,10 +21,11 @@
 }
 
 .about-text {
-  font-size: 20px;
+  font-size: 15px;
   color: #333;
   font-family: 'Karla', sans-serif;
-  font-weight: 500;
+  font-weight: 400;
+  text-align: justify;
 }
 
 .about-image-container {
